manifests/ingress/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 3000
  tls:
    - hosts:
        - "chai-homelab.com"
      secretName: chai-homelab-tls
